--- a/StockPrediction.ipynb
+++ b/StockPrediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Open   High    Low  Close     Volume  Ex-Dividend  Split Ratio  \\\n",
+      "Date                                                                          \n",
+      "1997-05-16  22.38  23.75  20.50  20.75  1225000.0          0.0          1.0   \n",
+      "1997-05-19  20.50  21.25  19.50  20.50   508900.0          0.0          1.0   \n",
+      "1997-05-20  20.75  21.00  19.63  19.63   455600.0          0.0          1.0   \n",
+      "\n",
+      "            Adj. Open  Adj. High  Adj. Low  Adj. Close  Adj. Volume  \n",
+      "Date                                                                 \n",
+      "1997-05-16   1.865000   1.979167  1.708333    1.729167   14700000.0  \n",
+      "1997-05-19   1.708333   1.770833  1.625000    1.708333    6106800.0  \n",
+      "1997-05-20   1.729167   1.750000  1.635833    1.635833    5467200.0  \n"
+     ]
+    }
+   ],
    "source": [
     "#Get the stock data\n",
     "\n",
@@ -54,9 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close\n",
+      "Date                  \n",
+      "1997-05-16    1.729167\n",
+      "1997-05-19    1.708333\n",
+      "1997-05-20    1.635833\n",
+      "1997-05-21    1.427500\n",
+      "1997-05-22    1.395833\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the Adjusted Close Price of the stock\n",
     "df=df[['Adj. Close']]\n",
@@ -74,9 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Adj. Close  Prediction\n",
+      "Date                              \n",
+      "1997-05-16    1.729167    1.541667\n",
+      "1997-05-19    1.708333    1.515833\n",
+      "1997-05-20    1.635833    1.588333\n",
+      "1997-05-21    1.427500    1.911667\n",
+      "1997-05-22    1.395833    2.000000\n"
+     ]
+    }
+   ],
    "source": [
     "#A variable for predicting 'n' days out into the future\n",
     "forecast_out=30      #'n' days\n",
@@ -97,9 +143,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   1.72916667]\n",
+      " [   1.70833333]\n",
+      " [   1.63583333]\n",
+      " ...\n",
+      " [1350.47      ]\n",
+      " [1338.99      ]\n",
+      " [1386.23      ]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Convert the dataframe to a numpy array\n",
     "X=np.array(df.drop(['Prediction'],1))\n",
@@ -119,9 +179,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.54166667e+00 1.51583333e+00 1.58833333e+00 ... 1.49556000e+03\n",
+      " 1.55586000e+03 1.49705000e+03]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#Convert the dataframe to a numpy array(All of the values the NaN)\n",
@@ -150,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,9 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVR(C=1000.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma=0.1,\n",
+       "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create and Train the Support Vectorn Machine (Regressor)\n",
     "\n",
@@ -203,9 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Confidence 0.9190193993453613\n"
+     ]
+    }
+   ],
    "source": [
     "#Testing Model Accuracy : returns the coefficient of the determination R^2 of the prediction\n",
     "#The best possible score is 1.0\n",
@@ -245,9 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Create and Train the Linear Regression Model\n",
     "lr=LinearRegression()\n",
@@ -258,9 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Confidence 0.9894178024349112\n"
+     ]
+    }
+   ],
    "source": [
     "#Testing Model Accuracy : returns the coefficient of the determination R^2 of the prediction\n",
     "#The best possible score is 1.0\n",
@@ -286,9 +394,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1414.51]\n",
+      " [1451.05]\n",
+      " [1461.76]\n",
+      " [1448.69]\n",
+      " [1468.35]\n",
+      " [1482.92]\n",
+      " [1484.76]\n",
+      " [1500.  ]\n",
+      " [1521.95]\n",
+      " [1511.98]\n",
+      " [1512.45]\n",
+      " [1493.45]\n",
+      " [1500.25]\n",
+      " [1523.61]\n",
+      " [1537.64]\n",
+      " [1545.  ]\n",
+      " [1551.86]\n",
+      " [1578.89]\n",
+      " [1598.39]\n",
+      " [1588.18]\n",
+      " [1591.  ]\n",
+      " [1582.32]\n",
+      " [1571.68]\n",
+      " [1544.93]\n",
+      " [1586.51]\n",
+      " [1581.86]\n",
+      " [1544.1 ]\n",
+      " [1495.56]\n",
+      " [1555.86]\n",
+      " [1497.05]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Set  x_forecast equal to the last 30 rows of the original data from Adj, Close column\n",
     "x_forecast=np.array(df.drop(['Prediction'],1))[-forecast_out:]\n",
@@ -318,9 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1500.02520904 1538.86132207 1550.24432072 1536.35302358 1557.24842539\n",
+      " 1572.73398004 1574.68960259 1590.88725893 1614.21656055 1603.62006227\n",
+      " 1604.11959629 1583.92566779 1591.15296852 1615.9808722  1630.89249414\n",
+      " 1638.71498434 1646.00605537 1674.73457576 1695.45992344 1684.60834397\n",
+      " 1687.60554809 1678.38011128 1667.07151132 1638.64058566 1682.83340393\n",
+      " 1677.89120564 1637.75842983 1586.16825669 1650.25740874 1587.75188582]\n"
+     ]
+    }
+   ],
    "source": [
     "#Print LR Model predictions for the next 'n' days (30 days in our case)\n",
     "lr_prediction=lr.predict(x_forecast)\n",
@@ -330,14 +488,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1048.2888614   660.36811275  659.35973841  687.2062306   659.35973841\n",
+      "  659.35973841  659.35973841  659.35973841  659.35973841  659.35973841\n",
+      "  659.35973841  659.35973841  659.35973841  659.35973841  659.35973841\n",
+      "  659.35973841  659.35973841  659.35973841  659.35973841  659.35973841\n",
+      "  659.35973841  659.35973841  659.35973841  659.35973841  659.35973841\n",
+      "  659.35973841  659.35973841  659.35973841  659.35973841  659.35973841]\n"
+     ]
+    }
+   ],
    "source": [
     "#Print SVm Model predictions for the next 'n' days (30 days in our case)\n",
     "svm_prediction=svr_rbf.predict(x_forecast)\n",
     "print(svm_prediction)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -360,5 +538,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
